<resources>
    <string name="app_name">Coffee Cup</string>
    <string name="beans_menu">Beans</string>
    <string name="recipes_menu">Recipes</string>
    <string name="home_menu">Home</string>
    <string name="coffee_log_menu">Coffee Cups</string>
    <string name="map_menu">Cafe Finder</string>
    <string name="add_photo">Add photo</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- AddRecipe field names -->
    <string name="ar_name">Name</string>
    <string name="ar_beans">Beans</string>
    <string name="ar_amount">Amount of coffee [g]</string>
    <string name="ar_prep_method">Preparation method</string>
    <string name="ar_grind_settings">Grind settings</string>
    <string name="ar_grind_scale">Grind scale</string>
    <string name="ar_brew_time">Brewing time</string>
    <string name="ar_extras">Extras</string>
    <string name="ar_rating">Rating</string>
    <string name="ar_notes">Notes (e.g. recipe steps)</string>
    <string name="ar_bought_ground">Bought ground</string>

    <!-- AddRecipe fields hints -->
    <string name="ar_hint_name">Recipe Name</string>
    <string name="ar_hint_method">E.g. drip, french press, etc.</string>
    <string name="ar_hint_grind">Grind notes, e.g. grinder model.</string>
    <string name="ar_hint_milk">Kind of milk</string>
    <string name="ar_hint_amount_ml">Amount [ml]</string>
    <string name="ar_hint_amount_g">Amount [g]</string>
    <string name="ar_hint_syrup">Flavour</string>
    <string name="ar_hint_sugar">Kind of sugar</string>


    <!-- Dialog -->
    <string name="dialog_discard_draft">Discard the draft?</string>
    <string name="dialog_discard_recipe_message">Your recipe will not be saved</string>
    <string name="dialog_discard_beans_message">Your beans will not be saved</string>
    <string name="dialog_discard_drink_message">Your drink will not be saved</string>
    <string name="dialog_check_title">Specify mandatory fields</string>
    <string name="dialog_check_mandatory">Recipe name, beans and preparation method have to be specified to save a recipe.</string>
    <string name="dialog_check_mandatory_beans">Beans name and Roaster must be specified to save Beans.</string>
    <string name="dialog_check_mandatory_drink">Drink and shop name must be specified to save a drink.</string>
    <string name="dialog_check_mandatory_drink_rec">Drink name and recipe must be specified to save a drink.</string>
    <string name="dialog_camera_gallery">Take a new photo or choose an image from gallery?</string>
    <string name="dialog_delete_recipe_title">Delete this recipe?</string>
    <string name="dialog_delete_beans_title">Delete these beans?</string>
    <string name="dialog_delete_drink_title">Delete this drink?</string>
    <string name="dialog_delete_recipe_mess">This operation cannot be reversed.</string>
    <string name="dialog_delete_beans_mess">All recipes that use these beans will be deleted as well. This operation cannot be reversed.</string>


    <!-- Recipe Card View -->
    <string name="rec_cv_name">Recipe Name</string>
    <string name="rec_cv_date">Date Added</string>
    <string name="rec_cv_beans">Beans used</string>
    <string name="rec_cv_method">Preparation method</string>
    <string name="rec_cv_rating">No rating provided</string>

    <!-- Recipe Details -->
    <string name="rd_time_not_set">Brewing time not set</string>
    <string name="rd_amount_not_set">Amount of coffee not set</string>
    <string name="rd_beans_used">beans used</string>
    <string name="rd_date_added">Date added</string>
    <string name="rd_rec_name">recipe name</string>
    <string name="rd_rec_image">recipe image</string>
    <string name="rd_grind_not_set">Grind scale not provided</string>
    <string name="rd_grind_notes">Grind notes not provided</string>
    <string name="rd_extras">No extras added</string>
    <string name="rd_notes_not_set">No notes provided</string>
    <string name="rd_notes">Notes</string>

    <!-- Beans Card View -->
    <string name="bean_cv_name">Beans Name</string>
    <string name="bean_cv_date">Date Added</string>
    <string name="bean_cv_roaster">Roaster</string>
    <string name="bean_cv_rating">No rating provided</string>
    <string name="bean_cv_roaster_hint">No roaster provided</string>

    <!-- Add Beans labels -->
    <string name="ab_name_label">Name</string>
    <string name="ab_roaster_label">Roaster</string>
    <string name="ab_roast_degree_label">Degree of roast</string>
    <string name="ab_beans_specs_label">Beans specs</string>
    <string name="ab_flavour_check_label">flavoured</string>
    <string name="ab_blend_label">blend</string>
    <string name="ab_single_origin_label">single origin</string>
    <string name="ab_blend_unknown">unknown</string>
    <string name="ab_decaf_label">decaf</string>
    <string name="ab_shopping_label">Shopping info</string>
    <string name="ab_link_label">Link to store</string>
    <string name="ab_cost_label">Cost per kilogram</string>
    <string name="ab_rating_label">Rating</string>
    <string name="ab_notes_label">Notes</string>
    <string name="ab_origin_label">Beans origin</string>


    <!-- Add beans hints -->
    <string name="ab_hint_name">Beans name</string>
    <string name="ab_hint_roaster">Roaster name</string>
    <string name="ab_hint_flavour">Flavour</string>
    <string name="ab_hint_url">URL to store</string>
    <string name="ab_hint_price">price</string>
    <string name="ab_hint_notes">Add your Beans notes here.</string>

    <!-- Bean details -->
    <string name="bd_name_label">Name</string>
    <string name="bd_image_label">Beans image</string>
    <string name="bd_name">Bean name</string>
    <string name="bd_date_label">Date added</string>
    <string name="bd_date_added">Date not provided</string>
    <string name="bd_roaster_label">Roaster</string>
    <string name="bd_roaster_name">Roaster name not provided</string>
    <string name="bd_degree_label">Degree of roast</string>
    <string name="bd_degree_of_roast">Degree of roast not provided</string>
    <string name="bd_beans_specs_label">Beans specs</string>
    <string name="bd_beans_specs">No beans specs provided</string>
    <string name="bd_shopping_label">Shopping info</string>
    <string name="bd_url">No store URL provided</string>
    <string name="bd_price">No price provided</string>
    <string name="bd_rating_label">Rating</string>
    <string name="bd_notes_label">Notes</string>
    <string name="bd_notes">No notes provided</string>

    <!-- Home Screen -->
    <string name="home_recipes_added_label">Recipes Added</string>
    <string name="home_no_recipes_added">No recipes</string>
    <string name="home_welcome_label">Hello, coffee lover!</string>
    <string name="home_beans_added_label">Beans Added</string>
    <string name="home_no_beans_added">No beans</string>
    <string name="coffee_recipe_image">Recipe image</string>
    <string name="coffee_beans_image">Beans image</string>
    <string name="home_track_cups">Track your cups</string>
    <string name="today">Today</string>
    <string name="week">This week</string>
    <string name="month">This month</string>
    <string name="total">Total</string>
    <string name="cups_drank">cups drank:</string>
    <string name="enjoy">enjoy your</string>


    <string name="no_beans">No beans added so far! Tap the + icon in the top right corner to add new beans.</string>
    <string name="no_recipes">No recipes added so far! Tap the + icon in the top right corner to add a new recipe.</string>
    <string name="no_drinks">No drinks added so far! Tap the + icon in the top right corner to add a new drink.</string>

    <!-- Add Drink -->
    <string name="store_fragment_tag">store_fragment</string>
    <string name="ad_from_store_tab">From coffee shop</string>
    <string name="ad_from_recipe_tab">Made from recipe</string>
    <string name="ad_drink_name_label">Drink name</string>
    <string name="ad_drink_name">Input drink name</string>
    <string name="ad_price_label">Price</string>
    <string name="ad_size_label">Size</string>
    <string name="ad_rating_label">Rating</string>
    <string name="ad_shop_info_label">Coffee Shop Info</string>
    <string name="ad_shop_name_label">Shop Name</string>
    <string name="ad_shop_address_label">Shop Address</string>
    <string name="ad_shop_address">Coffee Shop Address</string>
    <string name="ad_notes_label">Notes</string>
    <string name="ad_notes">Add your drink notes here.</string>
    <string name="ad_shop_name">Coffee shop name</string>
    <string name="ad_drink_source">Where did you get your drink from?</string>

    <string name="ad_rec_choose_recipe">Choose recipe you used:</string>
    <string name="ad_recipe_info_label">Chosen recipe info:</string>
    <string name="ad_rec_amount">amount of coffee used</string>
    <string name="title_activity_cafe_finder">CafeFinder</string>


</resources>