<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bean_card_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="7dp">

        <ImageView
            android:id="@+id/bl_beans_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:src="@mipmap/beans"
            android:contentDescription="Beans image"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/bl_beans_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/bean_cv_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bl_date_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bl_beans_name"
                android:layout_marginTop="7dp"
                android:text="@string/bean_cv_date" />

            <TextView
                android:id="@+id/bl_roaster_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bl_date_added"
                android:layout_marginTop="7dp"
                android:hint="@string/bean_cv_roaster_hint"
                android:maxLines="2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bl_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bl_roaster_name"
                android:layout_marginTop="7dp"
                android:text="@string/rec_cv_rating"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/bl_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:contentDescription="delete beans"
                android:src="@drawable/ic_delete" />

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>